--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
-.homeIcon::after {
-    content: 'homeInsLogo';
-    display: block;
-    height: 72px;  /*height of icon */
-    width: 72px;  /*width of icon */
-    position: absolute;
-      /*where to replace the icon */
-    top: 0px;
-    left: -40px;
-      /*background */
-    background: #F8E6AE url(ico.gif) no-repeat 0px 0px;
+.homeIns a {
+    align-items: center;
+    margin: 0 auto;
+    margin-left: 50px;
+    text-align: center;
+    color: black;
+       
 }
